--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -1,12 +1,22 @@
+html{
+    background: linear-gradient(to right,#F5F1EE,70%, #D6C4B0 );
+}
 body{
     color:#9D5D35;
     text-align: center;
+   
 }
+
 #Inscription{
     display: flex;
   
     flex-direction: column;
-    height: 200px;
+    height: 300px;
     width: 200px;
-    margin-left: 50%;
+    margin-left: 45%;
+   
+}
+fieldset{
+padding: 0;
+
 }
