--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -6,17 +6,6 @@ body{
     text-align: center;
    
 }
-
-#Inscription{
-    display: flex;
-  
-    flex-direction: column;
-    height: 300px;
-    width: 200px;
-    margin-left: 45%;
-   
-}
-fieldset{
-padding: 0;
-
+.information{
+    width: 100rem;
 }
