--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,51 +1,68 @@
-h1{
-    color: blueviolet;
+body{
+    background-color:#F5F1EE;
+    
 }
 
+h1{
+color: black;
+}
+main{
+   background:  #D6C4B0;
+   margin-left: 100px;
+   margin-right:300px ;
+   margin-bottom: 20px;
+   padding-top: 5px; 
+   padding-left: 10px;
+   padding-right: 10px;
+   padding-bottom: 10px;
+  
+}
 form div + div {
 margin-top: 2em;
 }
 
 label {
-/* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
 display: inline-block;
-width: 50px;
-/* text-align: right; */
+width: 300px;
+margin-left: 100px;
+margin-right:100px ;
+
 }
 
 input, textarea {
-/* Pour s'assurer que tous les champs texte ont la même police.
-Par défaut, les textarea ont une police monospace */
+
 font: 1em sans-serif;
 
-/* Pour que tous les champs texte aient la même dimension */
 width: 300px;
 box-sizing: border-box;
 
-/* Pour harmoniser le look & feel des bordures des champs texte */
-border: 1px solid rgb(12, 11, 11);
+border: 1px solid #D6C4B0;
+background-color: #D6C4B0;
+border-radius: 5px;
 }
-
 input:focus, textarea:focus {
-/* Pour souligner légèrement les éléments actifs */
-border-color: rgb(19, 18, 18);
+
+border-color: #ad290b;
+margin-left: 100px;
+margin-right:100px ;
 }
 
 textarea {
-/* Pour aligner les champs texte multi‑ligne avec leur étiquette */
 vertical-align: top;
 
-/* Pour donner assez de place pour écrire du texte */
 height: 5em;
+
 }
 
 .button {
-/* Pour placer le bouton à la même position que les champs texte */
-padding-left: 90px; /* même taille que les étiquettes */
+padding-left: 0px; 
 }
-
 button {
-/* Cette marge supplémentaire représente grosso modo le même espace que celui
-entre les étiquettes et les champs texte */
-margin-left: .5em;
+
+margin-left: 0em;
+color:#9D5D35 ;
+background-color: #D6C4B0;
+border-color: #D6C4B0;
+margin-left: 100px;
+margin-right:100px ;
 }
