--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -22,13 +22,16 @@ body{
 img{
    
 
-    height: 100px;
-    width: 100px;
+    height: 140px;
+    width: 200px;
 
 }
 #headMenu a{
     font-family: "montserrat",Arial, Helvetica, sans-serif;
     text-decoration: none;
     font-weight: 900;
+    color:black;
+}
+#headMenu a:hover{
     color:#9D5D35;
 }
