--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,3 +1,5 @@
+h2,h3{
+    text-align: center;}
 input[type=text],input[type=password],select,input[type=date],textarea
 {
     width: 100%;
@@ -16,4 +18,15 @@ input[type=submit] {
 }
 input[type=submit]:hover {
     background-color: #9D5D35;
+}
+.Connexion,.Information,.Adresse{
+    
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+        
+    margin: 0px  40% 0 40%;
+}
+.buton
+{
+    text-align: center;
 }
