--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,60 +1,59 @@
 * {
-    box-sizing: border-box;
-    
+  box-sizing: border-box;
 }
 
 form {
-    position: absolute;
-    /* postulat de départ */
- 
-    justify-content: center;
-    /* à 50%/50% du parent référent */
+  position: absolute;
+  /* postulat de départ */
+
+  justify-content: center;
+  /* à 50%/50% du parent référent */
+}
+
+input[type="text"],input[type="password"] {
+  width: 100%;
+  margin: 15px;
+  padding: 12px 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
   
 }
 
-input[type=text]
-{
-    width: 100%;
-    padding: 12px 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-}
-
 label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
+  margin: 15px;
+  padding: 12px 12px 12px 0;
+  display: inline-block;
 }
 
-input[type=submit] {
-    background-color: black;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    cursor: pointer;
-    margin: 20px 0px 20px 100px;
+input[type="submit"] {
+  background-color: black;
+  color: white;
+  margin: 15px;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  margin: 20px 0px 20px 190px;
+ 
 }
 
-input[type=submit]:hover {
-    background-color: #9D5D35;
+input[type="submit"]:hover {
+  background-color: #9d5d35;
 }
 
-a{
-    margin: 20px 0px 20px 75px;
-    text-decoration: none;
-    color: #d6c4b8;
-
-   
-}
-a:hover, a:focus {
-    
-    color: #9D5D35;
+.passwordOublie {
+  display:flex;
+  justify-content: end;
+  text-decoration: none;
+  margin: 15px;
+  color: #d6c4b8;
 }
 
-/* Clear floats after the columns */
+a:hover,
+a:focus {
+  color: #9d5d35;
+}
 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+#submitConnex{
+    margin: 20px 0px 20px 190px;
 }
