--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,5 +1,8 @@
-h2,h3{
-    text-align: center;}
+h2,h3
+{
+    text-align: center;
+}
+
     input[type=search]{
         width: 100%;
         padding: 12px 0px;
@@ -15,7 +18,8 @@ input[type=text],input[type=password],select,input[type=date],textarea
     border-radius: 50px;
     resize: vertical;
 }
-input[type=submit] {
+input[type=submit] 
+{
     background-color: black;
     color: white;
     padding: 12px 20px;
@@ -23,7 +27,8 @@ input[type=submit] {
     cursor: pointer;
     margin: 20px 90px 20px 100px;
 }
-input[type=submit]:hover {
+input[type=submit]:hover
+{
     background-color: #9D5D35;
 }
 .Connexion,.Information,.Adresse{
