--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,9 +1,12 @@
 body {
   margin: 0;
 }
+
 #navp {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
+
 #navp,
 #headMenu {
   display: flex;
@@ -12,25 +15,45 @@ body {
   background-color: #f5f1ee;
 }
 #headMenu {
-  margin: 0;
+  margin-right: 15rem;
   padding: 0;
+
+  
 }
 #headMenu > li {
   list-style: none;
-  margin: 0.5rem;
+  /* repetition
+  margin: 0.5rem;*/
+  
+  
+
+}
+input[type=search]{
+    width: 100%;
+    padding: 5px 0px;
+    border: 2px solid rgb(1, 1, 1);
+    border-radius: 50px;
+    resize: vertical;
+    margin-right: 13rem;
 }
 
 img {
+    margin-left: 15rem;
   height: 140px;
   width: 200px;
 }
 #headMenu a {
   font-family: "montserrat", Arial, Helvetica, sans-serif;
   text-decoration: none;
-  font-weight: 500;
-  font-size: large;
+/*  pas d'ffet
+ font-weight: 500; */
+  
   color: black;
+  margin: .5rem;
+  
+ 
 }
+
 #headMenu a:hover {
   color: #9d5d35;
 }
