--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
+
 }
 
 #navp {
-  
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 #navp,
@@ -17,43 +17,56 @@ body {
 #headMenu {
   margin-right: 15rem;
   padding: 0;
-
-  
 }
+
 #headMenu > li {
   list-style: none;
   /* repetition
   margin: 0.5rem;*/
-  
-  
+  text-align: center;
+	display: block;
 
 }
-input[type=search]{
-    width: 100%;
-    padding: 5px 0px;
-    border: 2px solid rgb(1, 1, 1);
-    border-radius: 50px;
-    resize: vertical;
-    margin-right: 13rem;
+
+.input{
+  margin-right: 11rem;
+}
+input[type="search"] {
+  width: 100%;
+  padding: 5px 0px;
+  border: 1px solid rgb(1, 1, 1);
+  border-radius: 4px;
+  resize: vertical;
+
 }
 
 img {
-    margin-left: 15rem;
+  margin-left: 15rem;
   height: 140px;
   width: 200px;
 }
 #headMenu a {
   font-family: "montserrat", Arial, Helvetica, sans-serif;
   text-decoration: none;
-/*  pas d'ffet
+  /*  pas d'ffet
  font-weight: 500; */
-  
-  color: black;
-  margin: .5rem;
-  
  
+ padding: 0 2px;
+ display: block;
+
+  color: black;
+  margin: 1rem;
+  
 }
 
 #headMenu a:hover {
   color: #9d5d35;
+}
+.icon{
+	width: 40px; /* changing the width of the icon */
+	height: 40px; /* changing the height of the icon */
+	text-align: center;
+	
+	margin:0 auto -12px;
+	
 }
