--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -34,17 +34,17 @@ h1 {
 
 .left-column {
 
-    height: 400px;
+    height: 500px;
     width: 550px;
-    box-shadow: 5px 5px 5px rgb(99, 97, 97);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
 
 .right-column {
-    height: 304px;
+    height: 500px;
     width: 550px;
     background-color: #d6c4b8;
-    box-shadow: 5px 5px 5px rgb(99, 97, 97);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
 
