--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -27,8 +27,7 @@ input[type=submit]:hover
 }
 .Connexion,.Information,.Adresse{
     
-    box-shadow: 5px 5px 5px rgb(99, 97, 97);
-        
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin: 0px  40% 0 40%;
 }
 .buton
