--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -28,16 +28,56 @@ body {
 
 }
 
-.input{
-  margin-right: 11rem;
+.container{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin-right: 15rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 input[type="search"] {
-  width: 100%;
-  padding: 5px 0px;
+  /* width: 350px;
+  padding: 5px;
   border: 1px solid rgb(1, 1, 1);
   border-radius: 4px;
-  resize: vertical;
+  resize: vertical; */
+  width: 350px;
+  background: white;
+  margin: 0;
+  padding: 10px 8px;
+  font-size: 14px;
+  border: none;
+ /*  border: 1px solid black;
+  border-radius: 4px; */
 
+}
+input[type="search"]::placeholder {
+  color: rgb(63, 62, 62);
+}
+button[type="submit"] {
+  text-indent: -999px;
+  overflow: hidden;
+  width: 40px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  /* border: 1px solid black;
+  border-radius: 4px; */
+  background: white url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
+  cursor: pointer;
+  opacity: 0.7;
+}
+button[type="submit"]:hover {
+  opacity: 1;
+}
+button[type="submit"]:focus,
+input[type="search"]:focus {
+  box-shadow: 0 0 3px 0 #9D5D35;
+  border-color:#9D5D35;
+  outline: none;
 }
 
 img {
