--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -14,6 +14,7 @@ h1 {
     align-items: center;
     justify-content: center;
     margin: 0 10% 0 10%;
+    width: 80%;
 }
 
 
@@ -28,23 +29,56 @@ h1 {
 .column {
     display: flex;
     flex-direction: column;
-    flex-basis: 100%;
+    flex-basis: 50%;
     flex: 1;
 }
 
-.left-column {
 
-    height: 500px;
+.left-column {
+padding: 50px;
+    height: 550px;
     width: 550px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
 
 .right-column {
-    height: 500px;
+    padding: 50px;
+    height: 550px;
     width: 550px;
     background-color: #d6c4b8;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
+#right-column > li {
+    list-style: none;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
+      
+      
+  
+  }
+   .icone i {
+    text-decoration: none;
+    color: rgb(12, 11, 11);
+    margin-right: 10px;
+    
+  }
+  
 
+ #reseauxSociaux{
+   
+list-style: none;
+display: flex;
+margin: 200px 80px 0px 50px;
+justify-content: space-between;
+ }
+
+    .iconeReseaux i{
+        color: black;
+        
+    }
+    #reseauxSociaux i:hover {
+        color: #9d5d35;
+      }
