--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -23,19 +23,16 @@ form div + div {
     margin-right:10px ;
     
     }
-    img{
-        margin-top: 10%;
-        height: 20px;
-        width: 50px;
-    }
+   
     input, textarea {
     
     width: 90%;
-    padding: 12px 20px;
-    margin-left: 10px;
-    margin-right:10px ;
+    padding: 12px 15px;
+  
+    
     border: 1px solid #ccc;
     border-radius: 4px;
+    resize: vertical;
 
     }
     
